Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-99960

A crash when comparing two null QVariants

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • 6.2.5, 6.3.0 Beta1, 6.4.0 Beta1
    • 6.2.2
    • Core: Other
    • None
    • Tested on Windows 10, Microsoft Visual Studio Enterprise 2019
      Version 16.8.4
    • Windows
    • a59e736171 (qt/qtbase/dev) b02508c98a (qt/qtbase/6.3) 09c7f37ce3 (qt/qtbase/6.2) 09c7f37ce3 (qt/tqtc-qtbase/6.2)

    Description

      Here is simple program that replicate it

       

      #include <QCoreApplication>
      #include <QVariant>
      #include <QDebug>
      
      int main(int argc, char *argv[])
      {
       QVariant var_1;
       QVariant var_2;
      
      auto result = QVariant::compare(var_1, var_2);
       QCoreApplication a(argc, argv);
      
      return a.exec();
      }
      

      It crashes on command QVariant::compare(var_1, var_2), but only if both QVariants are null

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thiago Thiago Macieira
            jkolar Janko
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes