QMetaType: add a missing check for null d_ptr

Bug introduced in 6.0. This is the only unprotected d_ptr I could find.

[ChangeLog][QtCore][QMetaType] Fixed a bug that would cause
QMetaType::compare() and QVariant::compare() to crash on invalid meta
types and variants.

Fixes: QTBUG-99960
Change-Id: I0e5f6bec596a4a78bd3bfffd16cb1f7b2d146688
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit a59e7361714d50687d82a2d9abae9e95825a23b6)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>